--- a/app/src/main/res/layout/activity_bin_game.xml
+++ b/app/src/main/res/layout/activity_bin_game.xml
@@ -8,6 +8,7 @@
     tools:context=".BinGame">
 
     <FrameLayout
+        android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,34 +16,32 @@
             android:id="@+id/background_0"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/clouds0"/>
+            android:src="@drawable/clouds0" />
 
         <ImageView
             android:id="@+id/background_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/clouds1"/>
+            android:src="@drawable/clouds1" />
 
         <ImageView
             android:id="@+id/background_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/clouds2"/>
+            android:src="@drawable/clouds2" />
 
         <ImageView
             android:id="@+id/background_3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/clouds3"/>
+            android:src="@drawable/clouds3" />
     </FrameLayout>
 
     <TextView
         android:id="@+id/questionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="30sp"
@@ -66,13 +65,11 @@
 
     <LinearLayout
         android:id="@+id/optionsLayout"
-        android:layout_width="395dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/optionTagsLayout"
+        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -101,51 +98,14 @@
             app:srcCompat="@drawable/food_waste" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/optionTagsLayout"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/textView_option1_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/generalWasteButton"
-            android:textAlignment="center" />
-
-        <TextView
-            android:id="@+id/textView_option2_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/recycleButton"
-            android:textAlignment="center" />
-
-        <TextView
-            android:id="@+id/textView_option3_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/organicWasteButton"
-            android:textAlignment="center" />
-    </LinearLayout>
-
     <TextView
         android:id="@+id/textView_DND_game_results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:textAllCaps="false"
+        android:textColor="#000000"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
