--- a/app/src/main/res/layout/activity_multi_player_game.xml
+++ b/app/src/main/res/layout/activity_multi_player_game.xml
@@ -12,16 +12,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:rotation="180"
         android:text="Question"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView_player2_question_number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radio_group2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
         android:id="@+id/radio_group2"
@@ -29,7 +30,6 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:rotation="180"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -38,6 +38,7 @@
             android:id="@+id/radio_button2_option1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bubblegum_sans"
             android:text="Option 1"
             android:textSize="18sp" />
 
@@ -45,6 +46,7 @@
             android:id="@+id/radio_button2_option2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bubblegum_sans"
             android:text="Option 2"
             android:textSize="18sp" />
 
@@ -52,6 +54,7 @@
             android:id="@+id/radio_button2_option3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bubblegum_sans"
             android:text="Option 3"
             android:textSize="18sp" />
 
@@ -60,6 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/bubblegum_sans"
             android:text="Option 4"
             android:textSize="18sp" />
 
@@ -70,7 +74,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -79,6 +82,7 @@
             android:id="@+id/radio_button1_option1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bubblegum_sans"
             android:text="Option 1"
             android:textSize="18sp" />
 
@@ -86,6 +90,7 @@
             android:id="@+id/radio_button1_option2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bubblegum_sans"
             android:text="Option 2"
             android:textSize="18sp" />
 
@@ -93,6 +98,7 @@
             android:id="@+id/radio_button1_option3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bubblegum_sans"
             android:text="Option 3"
             android:textSize="18sp" />
 
@@ -101,6 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/bubblegum_sans"
             android:text="Option 4"
             android:textSize="18sp" />
 
@@ -111,21 +118,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="Question"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/radio_group1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_player1_question_number" />
 
     <TextView
         android:id="@+id/textview_countdown_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="Time"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -138,6 +147,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:rotation="180"
         android:text="Time"
         android:textColor="#FFFFFF"
@@ -151,6 +161,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="Player 1 score: 0"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -165,6 +176,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="Player 2 score: 0"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -178,14 +190,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="Question Number"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/p1TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_winner_text" />
 
     <TextView
         android:id="@+id/textView_player2_question_number"
@@ -193,14 +207,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:rotation="180"
         android:text="Question Number"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView_winner_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/p2TextView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView_winner_text"
@@ -210,6 +226,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="Winner"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -226,6 +243,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="RETURN TO MAIN MENU"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
