Removed all the direct game buttons from the main menu and replaced them with cinematics button, instructions button and reset progress button. Changed the background of the main menu.

--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -1,82 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".MainMenu"
-tools:layout_editor_absoluteX="8dp"
-tools:layout_editor_absoluteY="8dp">
-
-    <Button
-        android:id="@+id/whichBinButtonX"
-        android:layout_width="187dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/whichBin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/levelSelectorButtonX" />
-
-    <Button
-        android:id="@+id/triviaGameX"
-        android:layout_width="187dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="28dp"
-        android:text="@string/trivia_game"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/whichBinButtonX" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/menu_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bad_art_frontscreen_no_text"
+    tools:context=".MainMenu"
+    tools:layout_editor_absoluteX="8dp"
+    tools:layout_editor_absoluteY="8dp">
 
     <Button
         android:id="@+id/multiplayerGameX"
-        android:layout_width="187dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/multiplayer_game"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/triviaGameX"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/levelSelectorButtonX"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="PLAY!"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:enabled="false"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="@string/multiplayer_game"
+        app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
+        app:layout_constraintStart_toStartOf="@+id/menu_guidline1"
+        app:layout_constraintTop_toBottomOf="@+id/levelSelectorButtonX" />
 
     <Button
-        android:id="@+id/tiledGameButton"
-        android:layout_width="187dp"
-        android:layout_height="100dp"
+        android:id="@+id/levelSelectorButtonX"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/main_game"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/multipleChoiceGameX" />
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="@string/play_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
+        app:layout_constraintStart_toStartOf="@+id/menu_guidline1"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/multipleChoiceGameX"
-        android:layout_width="187dp"
-        android:layout_height="100dp"
+        android:id="@+id/cinematicX"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/multipleChoice_game"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="@string/dialogue_button"
+        app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
+        app:layout_constraintStart_toStartOf="@+id/menu_guidline1"
         app:layout_constraintTop_toBottomOf="@+id/multiplayerGameX" />
+
+    <Button
+        android:id="@+id/instructionsX"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="@string/onboarding_button"
+        app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
+        app:layout_constraintStart_toStartOf="@+id/menu_guidline1"
+        app:layout_constraintTop_toBottomOf="@+id/cinematicX" />
+
+    <Button
+        android:id="@+id/resetX"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="@string/reset_button"
+        app:layout_constraintEnd_toStartOf="@+id/menu_guidline2"
+        app:layout_constraintStart_toStartOf="@+id/menu_guidline1"
+        app:layout_constraintTop_toBottomOf="@+id/instructionsX" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/menu_guidline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.2" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/menu_guidline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.8" />
 
 </android.support.constraint.ConstraintLayout>
