--- a/app/src/main/res/layout/activity_level_selection_world_three.xml
+++ b/app/src/main/res/layout/activity_level_selection_world_three.xml
@@ -7,6 +7,19 @@
     android:background="@drawable/world_three"
     tools:context=".LevelSelectionWorldThree">
 
+    <Button
+        android:id="@+id/button_world_three_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/bubblegum_sans"
+        android:text="Return to main menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
