--- a/app/src/main/res/layout/activity_trivia_answer.xml
+++ b/app/src/main/res/layout/activity_trivia_answer.xml
@@ -8,6 +8,7 @@
     tools:context=".TriviaAnswerActivity">
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,25 +16,25 @@
             android:id="@+id/background_0"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/clouds0"/>
+            android:src="@drawable/clouds0" />
 
         <ImageView
             android:id="@+id/background_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/clouds1"/>
+            android:src="@drawable/clouds1" />
 
         <ImageView
             android:id="@+id/background_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/clouds2"/>
+            android:src="@drawable/clouds2" />
 
         <ImageView
             android:id="@+id/background_3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/clouds3"/>
+            android:src="@drawable/clouds3" />
     </FrameLayout>
 
     <TextView
@@ -41,22 +42,27 @@
         android:layout_width="362dp"
         android:layout_height="75dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/answer_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/frameLayout" />
 
     <TextView
         android:id="@+id/answer_info"
         android:layout_width="355dp"
-        android:layout_height="180dp"
+        android:layout_height="240dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="276dp"
+        android:fontFamily="@font/bubblegum_sans"
         android:text="TextView"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.575"
@@ -71,6 +77,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Next Question"
+        android:fontFamily="@font/bubblegum_sans"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.717"
@@ -88,6 +95,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Previous Question"
+        android:fontFamily="@font/bubblegum_sans"
         app:layout_constraintBottom_toTopOf="@+id/main_menu_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/answer_info"
@@ -102,7 +110,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="100dp"
-        android:text="Return to main menu"
+        android:text="Return to level selection"
+        android:fontFamily="@font/bubblegum_sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -118,6 +127,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
+        android:fontFamily="@font/bubblegum_sans"
         app:layout_constraintBottom_toTopOf="@+id/question_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
