Customised the buttons and added this to the trivia game classes

--- a/app/src/main/res/layout/activity_trivia_game.xml
+++ b/app/src/main/res/layout/activity_trivia_game.xml
@@ -71,7 +71,10 @@
         android:layout_height="wrap_content"
         android:text="True"
         android:fontFamily="@font/bubblegum_sans"
-        android:background="#ffffff"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +89,10 @@
         android:layout_height="wrap_content"
         android:text="False"
         android:fontFamily="@font/bubblegum_sans"
-        android:background="#ffffff"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
