--- a/app/src/main/res/layout/activity_trivia_answer.xml
+++ b/app/src/main/res/layout/activity_trivia_answer.xml
@@ -72,7 +72,10 @@
         android:id="@+id/next_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
@@ -89,7 +92,10 @@
         android:id="@+id/prev_answer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
@@ -105,7 +111,10 @@
         android:id="@+id/main_menu_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
+        android:background="@drawable/button_rounded_corners"
+        android:drawablePadding="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
